# Fastapi_to_do_List

./: .gitignore  README.md  __init__.py  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  operations.py  tasks.py
app/domain/: interfaces.py  models.py
app/infrastructure/repositories/: operation_repository.py  task_repository.py
app/infrastructure/storage/: in_memory_storage.py
app/services/: operation_service.py  task_service.py
