[project]
name = "modern-todo-api"
version = "0.1.0"
description = "Modern ToDo API with FastAPI and Clean Architecture"
authors = [
    {name = "cerg", email = "cerg0909@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.27.1,<0.28.0",
    "pydantic>=2.6.1,<3.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "email-validator>=2.1.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "modern-todo-api"
version = "0.1.0"
description = "mini todo"
authors = ["cerg <cerg0909@mail.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
python-multipart = "^0.0.9"
email-validator = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
